# anduflow

./: .gitignore  Cargo.toml  README.md  anduflow_logs.db  output.csv  output.parquet  output_unnest.parquet  spacedevs_latest_article.json
anduflow-core/: Cargo.toml
anduflow-core/src/: lib.rs
anduflow-core/src/extract/: error.rs  mod.rs  rest_extractor.rs
anduflow-core/src/load/: mod.rs
anduflow-utils/: Cargo.toml
anduflow-utils/src/: error.rs  lib.rs
anduflow-utils/src/logger/: store.rs
etl-core/: Cargo.toml  README.md
etl-core/src/: lib.rs  main.rs
etl-core/src/extract/: error.rs  mod.rs  rest_extractor.rs
etl-core/tests/: error_tests.rs  integration_tests.rs  rest_extractor_tests.rs
examples/extractors/: main.rs
src/: lib.rs  main.rs
