[package]
name = "anduflow"
version = "0.1.0"
description = "A Rust ETL framework"
license = "MIT"
edition = "2024"
repository = "https://github.com/tbar4/anduflow"
homepage = "https://github.com/tbar4/anduflow"
documentation = "https://docs.rs/anduflow"


[workspace]
members = ["etl-core"]

[workspace.dependencies]
reqwest = { version = "0.12.28", features = ["json"] }
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
thiserror = "2.0.17"
async-trait = "0.1.89"
datafusion = "51.0.0"
object_store = "0.12.4"

[dev-dependencies]
pretty_assertions = "1.4.1"

[dependencies]
dotenv = "0.15.0"
etl-core = { path = "etl-core" }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
