[package]
name = "anduflow"
version = "0.1.0"
description = "A Rust ETL framework"
license = "MIT"
edition = "2024"
repository = "https://github.com/tbar4/anduflow"
homepage = "https://github.com/tbar4/anduflow"
documentation = "https://docs.rs/anduflow"

[workspace]
members = [
    "anduflow-core", "anduflow-utils",
]

[workspace.dependencies]
reqwest = { version = "0.12.28", features = ["json"] }
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
thiserror = "2.0.17"
async-trait = "0.1.89"
datafusion = "51.0.0"
object_store = "0.12.4"
bytes = "1.11.0"
dotenv = "0.15.0"
rusqlite = "0.30.0"
chrono = "0.4.42"
tracing = "0.1.44"
uuid = { version = "1.19.0", features = ["v4"] }
tracing-subscriber = { version = "0.3.22", features = ["json", "serde", "serde_json", "chrono"] }

[dependencies]
dotenv.workspace = true
rusqlite.workspace = true
serde_json.workspace = true
tokio.workspace = true
anduflow_core = { version = "0.1.0", path = "anduflow-core" }
anduflow_utils = { version = "0.1.0", path = "anduflow-utils" }
chrono = { workspace = true, features = ["serde"] }
tracing-subscriber.workspace = true
tracing.workspace = true

[dev-dependencies]
pretty_assertions = "1.4.1"
httpmock = "0.7"
