[package]
name = "anduflow_core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = {workspace = true}
bytes = {workspace = true}
datafusion.workspace = true
object_store.workspace = true
reqwest = { workspace = true, features = ["json"] }
serde = {workspace = true , features = ["derive"] }
serde_json = {workspace = true}
thiserror.workspace = true
tokio = {workspace = true, features = ["full"] }
anduflow_utils = { version = "0.1.0", path = "../anduflow-utils" }
rusqlite.workspace = true
uuid = { workspace = true, features = ["v4"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["json", "serde", "serde_json", "chrono"] }
