[package]
name = "anduflow_utils"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
datafusion.workspace = true
object_store.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid = { workspace = true, features = ["v4", "serde"] }
serde = { workspace = true, features = ["derive"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["json", "serde", "serde_json", "chrono"] }
