[package]
name = "etl-core"
version = "0.1.0"
edition = "2024"

[dependencies]
arrow = { workspace = true, features = ["json"] }
async-trait.workspace = true
flatten-json-object = "0.6.1"
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
