[package]
name = "etl-core"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait.workspace = true
bytes = "1.11.0"
datafusion.workspace = true
object_store.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
httpmock = "0.7"
